(lang dune 3.13)

(name grep_cmt)

(generate_opam_files true)

(source
 (github LexiFi/grep_cmt))

(authors "Author Name")

(maintainers "Maintainer Name")

(license MIT)

(package
 (name grep_cmt)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
